tests/integration/snapshots/test_build_compilation_error.stderr.txt
Error: In broken:

[ROOT]/contracts/broken[LINE]: error: undefined symbol `nonexistent`

    // in function `onInternalMessage`
   3 |                 val x = nonexistent; // This will cause compilation error
     |                         ^^^^^^^^^^^

Build failed with 1 error
